Crypto: Berechnen des MD5-Wertes

--- a/skript/crypto/crypto.bib
+++ b/skript/crypto/crypto.bib
@@ -25,10 +25,18 @@
 	pages={95-106},
 }
 
-@article{crypto:opencl_ref,
+@manual{crypto:opencl_ref,
   title={OpenCL 1.2 Reference Pages},
-  author={Khronos Group Inc.},
+  organization={Khronos Group Inc.},
   year={2011},
   url={http://www.khronos.org/registry/cl/sdk/1.2/docs/man/xhtml/},
   urldate={2014-05-19}
+}
+
+@manual{crypto:nvidia_bestpractices,
+	title={NVIDIA OpenCL Best Practices Guide Version 1.0},
+	organization={NVIDIA Corporation},
+	year={2009},
+	url={http://www.nvidia.com/content/cudazone/CUDABrowser/downloads/papers/NVIDIA_OpenCL_BestPracticesGuide.pdf},
+	urldate={2014-05-26}
 }
