Crypto: Reorganized implementation chapters

--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -580,6 +580,8 @@ for (int i = 0; i < 3; i++) {
 \end{verbatim}
 \end{small}
 
+\section{Implementationseigenheiten}
+
 \subsection{Berechnen des MD5-Wertes}
 
 Zur effektiven Berechnung des MD5-Wertes haben wir eine bereits bestehende
@@ -623,9 +625,8 @@ m"oglichen Optimierungen ist, sieht man beispielsweise eindr"ucklich am
 - Wie werden die Kernel initialisiert? Wie wird der R"uckgabewert entgegen
 genommen?
 
-\section{Implementationseigenheiten}
+\subsection{Limitationen der gew"ahlten L"osung}
 
-(Ev. als Subsection von "L"osungsansatz")
 - Limitationen der gew"ahlten L"osung
 - Was k"onnte man verbessern?
 - ...
